# SebF2DEngine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  SebF2DEngine.cpp  SebF2DEngine.h
Config/: GameConfig.h
ECS/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Engine/: GameEngine.cpp  GameEngine.h  Scene.h
Game/: CCollider.h  CCollisionState.h  CRigidbody.h  CShape.h  CTransform.h
Maths/: Vec2.h
Physics/: Collision.cpp  Collision.h  Contact.cpp  Contact.h  PhysicsConstants.h  QuadTree.cpp  QuadTree.h  SPhysics.cpp  SPhysics.h
Scenes/: SceneCollision.cpp  SceneCollision.h  SceneFalling.cpp  SceneFalling.h  SceneFallingCircle.cpp  SceneFallingCircle.h  SceneGravity.cpp  SceneGravity.h  SceneNoQuadTree.cpp  SceneNoQuadTree.h  SceneQuadTree.cpp  SceneQuadTree.h
Utils/: Logger.h
